@@ -22,13 +22,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 66)
-(Parent-Version lpmud 3-3 65)
-(Version-Log "Corrected the evaluation of the --with-wizlist-file config option.
-Removed the second scan through the command line arguments.")
+(Project-Version lpmud 3-3 67)
+(Parent-Version lpmud 3-3 66)
+(Version-Log "Commandline options can be read from a textfile.")
 (New-Version-Log
 "")
-(Checkin-Time "Thu, 28 Jun 2001 23:18:17 -0600")
+(Checkin-Time "Sat, 30 Jun 2001 14:31:28 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -61,8 +60,8 @@ Removed the second scan through the command line arguments.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.3 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.18 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.129 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.184 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.130 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.185 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.10 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -145,7 +144,7 @@ Removed the second scan through the command line arguments.")
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.8 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.45 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.5 644))
-  (src/main.c (lpmud/b/8_main.c 1.60.1.34 644))
+  (src/main.c (lpmud/b/8_main.c 1.60.1.35 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.7 644))
   (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.24 644))
   (src/md5.h (lpmud/L/18_md5.h 1.1 644))
@@ -701,7 +700,7 @@ Removed the second scan through the command line arguments.")
   (doc/driver/debugmalloc (lpmud/n/42_debugmallo 1.3 644))
   (doc/driver/driver (lpmud/n/43_driver 1.2 644))
   (doc/driver/dumpallobj (lpmud/n/44_dumpallobj 1.3 644))
-  (doc/driver/invocation (lpmud/f/38_invocation 1.14.1.7 644))
+  (doc/driver/invocation (lpmud/f/38_invocation 1.14.1.8 644))
   (doc/driver/malloc (lpmud/n/45_malloc 1.3 644))
   (doc/driver/opcdump (lpmud/n/46_opcdump 1.3 644))
   (doc/driver/predefined (lpmud/h/8_predefined 1.12.1.6 644))
